--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack Fun</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
   <h1>Webpack Fun</h1>
-  
-  <script src="bundle.js"></script>
+  <ul class="list"></ul>
+  <h2>Changed HTML!</h2>
 </body>
 </html>
